--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "bootstrap": "^5.1.3"
+        "bootstrap": "^5.1.3",
+        "fontawesome": "^5.6.3"
     }
 }
